# engine

./: .gitignore  Makefile  Makefile.am  cmd.c  cmd.h  configure.ac  debug.c  debug.h  events.c  events.h  fshader.glsl  main.c  main.h  render.c  render.h  vshader.glsl  window.c  window.h
reading/: notes.txt
resource/shader/: vshader.glsl
src/: Makefile.am  cmd.c  cmd.h  debug.c  events.c  events.h  main.h  render.c  render.h  util.c  util.h
